--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrm/ClientApp/src/App.css
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrm/ClientApp/src/App.css
@@ -79,6 +79,7 @@
   bottom: 60px;
   width: 100%;
 
+  overflow-y: auto;
   background-color: #e8f5e9;
 }
 
@@ -96,11 +97,21 @@
 .table-content{
   margin-left: 20px;
   margin-top: 20px;
-  width: 70%;
-  height: 70%;
+  padding: 20px;
+  width: 65%;
+  /* height: 50%; */
   border: 1px solid black;
 
   border-collapse: collapse;
+}
+
+.table-content td{
+  padding: 20px;
+}
+
+.table-content th{
+  padding: 20px;
+  border-right: 1px solid #004c40;
 }
 
 .tr, td{
